// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElectionResultsTally.vue renders 10% and 90%: with 10% and 90% 1`] = `
<div
  id="tally"
>
  <h2
    class="title"
  >
    
    electionResults
  
  </h2>
   
  <div>
    <hr
      class="hr"
    />
     
    <h3
      class="title"
    >
      mockRaceName
    </h3>
     
    <div>
      <div
        class="columns"
      >
        <div
          class="name column is-one-quarter"
        >
          
          mockName0
          
          <div
            class="party"
          >
            mockParty0
          </div>
        </div>
         
        <div
          class="votes column"
        >
          <electionresultstallybar-stub
            count="1"
            isfirst="true"
            percentage="10.0%"
          />
        </div>
      </div>
      <div
        class="columns"
      >
        <div
          class="name column is-one-quarter"
        >
          
          mockName1
          
          <div
            class="party"
          >
            mockParty1
          </div>
        </div>
         
        <div
          class="votes column"
        >
          <electionresultstallybar-stub
            count="9"
            percentage="90.0%"
          />
        </div>
      </div>
    </div>
  </div>
   
  <button
    class="button is-success tooltip"
    data-tooltip="featureNotAvailable"
  >
    downloadElectionTally
  </button>
</div>
`;

exports[`ElectionResultsTally.vue renders 25% and 75%: with 25% and 75% 1`] = `
<div
  id="tally"
>
  <h2
    class="title"
  >
    
    electionResults
  
  </h2>
   
  <div>
    <hr
      class="hr"
    />
     
    <h3
      class="title"
    >
      mockRaceName
    </h3>
     
    <div>
      <div
        class="columns"
      >
        <div
          class="name column is-one-quarter"
        >
          
          mockName0
          
          <div
            class="party"
          >
            mockParty0
          </div>
        </div>
         
        <div
          class="votes column"
        >
          <electionresultstallybar-stub
            count="1"
            isfirst="true"
            percentage="25.0%"
          />
        </div>
      </div>
      <div
        class="columns"
      >
        <div
          class="name column is-one-quarter"
        >
          
          mockName1
          
          <div
            class="party"
          >
            mockParty1
          </div>
        </div>
         
        <div
          class="votes column"
        >
          <electionresultstallybar-stub
            count="3"
            percentage="75.0%"
          />
        </div>
      </div>
    </div>
  </div>
   
  <button
    class="button is-success tooltip"
    data-tooltip="featureNotAvailable"
  >
    downloadElectionTally
  </button>
</div>
`;
